--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Test GitHub Pages
+<!DOCTYPE html>
+<html>
+<head>
+<title>My First GitHub Page</title>
+</head>
+<body>
+
+<h1>My First GitHub Page</h1>
+<p>Checking out GiHub Pages</p>
+
+</body>
+</html>
